@@ -2,21 +2,23 @@ package ar.edu.unq.poo2.item;
 
 import static org.junit.jupiter.api.Assertions.*;
 
+import ar.edu.unq.poo2.venta.RegistroDeItem;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+
+import java.util.List;
+
 import static org.mockito.Mockito.*;
 
 class ProductoTest {
 	Producto pr1;
 	
 	@BeforeEach
-	void setUp() throws Exception {
+	void setUp(){
 		pr1 = new Producto("SKU-NGA", "Notebook", "Notebook gamer 16GB", 2500, "Asus", Categoria.ELECTRONICA, 100000.0, 0.10);	}
 
 	@Test
-	void testGetters() {
-		
-		
+	void test_Getters() {
 		assertEquals("SKU-NGA", pr1.getResumenDeSku().keySet().iterator().next());
 		assertEquals(1, pr1.getResumenDeSku().values().iterator().next());
 		assertEquals(2500, pr1.getPeso());
@@ -26,6 +28,7 @@ class ProductoTest {
 		assertEquals(90000.0, pr1.getPrecio(), 0.001);
 		assertEquals(100000.0, pr1.getPrecioBase());
 	}
+
 	@Test
 	void test_Accesors_AtributosDinamicos() {
 		pr1.setAtributoDinamico("Color","Rojo");
@@ -35,54 +38,46 @@ class ProductoTest {
 		assertEquals("Rojo", pr1.getAtributoDinamico("Color").getValor());
 		assertEquals(false, pr1.getAtributoDinamico("Graficos Integrados").getValor());
 		assertEquals(500.0, pr1.getAtributoDinamico("Disco").getValor());
-		
-		
 	}
 	@Test
-	void test_AtributosSonValidos() {
-		assertTrue(pr1.atributosSonValidos());
-		
+	void test_AtributosDinamicosValidos_SonConsideradosValidos() {
 		pr1.setAtributoDinamico("Color","Rojo");
 		pr1.setAtributoDinamico("Graficos Integrados", false);
 		pr1.setAtributoDinamico("Disco", 500);
-		
+
 		assertTrue(pr1.atributosSonValidos());
-		
-		
 	}
 
 	@Test
 	void test_AtributosSonInvalidos_Por_Setear_NullComoSKU() {
 		Producto productoTest = new Producto(null, "Notebook", "Notebook 16GB", 500, "Asus", Categoria.ELECTRONICA, 15000.0, 0.10);
+
 		assertFalse(productoTest.atributosSonValidos());
 	}
 
 	@Test
 	void test_AtributosSonInvalidos_Por_Setear_NullComoNombre() {
 		Producto productoTest = new Producto("SKU_NGA", null, "Notebook 16GB", 500, "Asus", Categoria.ELECTRONICA, 15000.0, 0.10);
+
 		assertFalse(productoTest.atributosSonValidos());
 	}
 
 	@Test
 	void test_AtributosSonInValidos_Por_Setear_NullComoValorEnAtributoDinamico() {
 		pr1.setAtributoDinamico("Color", (Boolean) null);
+
 		assertFalse(pr1.atributosSonValidos());
 	}
 
 	@Test
 	void test_AtributosDinamicosSonInValidos_Por_Setear_StringVacioComoValor() {
-		assertTrue(pr1.atributosSonValidos());
-		
-		
 		pr1.setAtributoDinamico("Graficos Integrados", false);
 		pr1.setAtributoDinamico("Disco", 500);
-		
 		assertTrue(pr1.atributosSonValidos());
-		
+
 		pr1.setAtributoDinamico("Color"," ");
+
 		assertFalse(pr1.atributosSonValidos());
-		
-		
 	}
 
 	@Test
@@ -91,30 +86,33 @@ class ProductoTest {
 		assertTrue(pr1.getResumenDeSku().containsKey("SKU-NGA"));
 		assertEquals(1, pr1.getResumenDeSku().get("SKU-NGA").intValue());
 	}
-	
+
 	@Test
 	void test_registroDeItem_producto() {
-		assertEquals(1, pr1.getRegistroDeItem(1.0).size());
-		assertEquals(pr1, pr1.getRegistroDeItem(1.0).get(0).getItem());
-		assertEquals(90000.0, pr1.getRegistroDeItem(1.0).get(0).getPrecio(), 0.001);
+		List<RegistroDeItem> registros = pr1.getRegistroDeItem(1.0);
+
+		assertEquals(1, registros.size());
+		assertEquals(pr1, registros.getFirst().getItem());
+		assertEquals(90000.0, registros.getFirst().getPrecio(), 0.001);
 	}
 	
 	@Test
-	void test_NoPuedeAgregarProducto() {
+	void test_NoPuedeAgregarItem() {
 		Producto prMock = mock(Producto.class);
+
 		assertThrows(UnsupportedOperationException.class, () -> pr1.add(prMock));
 	}
 	@Test
-	void test_NoPuedeEliminarProducto() {
+	void test_NoPuedeEliminarItem() {
 		Producto prMock = mock(Producto.class);
+
 		assertThrows(UnsupportedOperationException.class, () -> pr1.remove(prMock));
 	}
+
 	@Test
 	void test_ResumenDePrecio() {
 		assertEquals(1, pr1.getResumenDePrecio().size());
 		assertTrue(pr1.getResumenDePrecio().containsKey("Notebook"));
 		assertEquals(90000.0, pr1.getResumenDePrecio().get("Notebook"), 0.001);
 	}
-
-
 }
